feat: add routers

--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -16,10 +16,10 @@
                         <a class="nav-link itens-font" aria-current="page" href="#"><i class="bi bi-person-fill"></i> MINHA CONTA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link itens-font" href="#"><i class="bi bi-person-circle"></i> CRIAR CONTA</a>
+                        <a class="nav-link itens-font" routerLink="/register"><i class="bi bi-person-circle"></i> CRIAR CONTA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link itens-font" href="#"><i class="bi bi-key-fill"></i> LOGIN</a>
+                        <a class="nav-link itens-font" routerLink="/"><i class="bi bi-key-fill"></i> LOGIN</a>
                     </li>
                 </ul>
             </div>
