add navbar dashboard component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 $theme-colors: (
     "primary": #004e7a,
     "secondary" : #003ba8,
+    "baby-blue" : #e2e9ff,
+    "pink-chat" : #db6287,
+    "contact-hover": #ebebeb,
+    "leave": #ff0000
 );
 
 @import 'node_modules/bootstrap/scss/bootstrap';
