--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
           <p class="font-f ms-3 mt-1">{{username}}</p>
         </div>
       </div>
-      <div class="overflow-auto your-element" style="max-height:500px;">
+      <div class="overflow-auto your-element" style="max-height:500px;" #yourElement>
         <div *ngFor="let message of threadMessages">
           <div class="d-flex flex-column align-items-end mt-3" style="margin-top:3.7rem !important;"
             *ngIf="message.sender_id === Userid">
