chore change application language to English

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,8 +3,8 @@
     <body>
         <div class="container-fluid">
             <div class="main-content">
-                <h2 id="v-compras">Vamos as compras !</h2>
-                <p id="v-email-senha">Coloque o email e senha para prosseguir com o login</p>
+                <h2 id="v-compras">Let's chat !</h2>
+                <p id="v-email-senha">Enter your email and password to proceed</p>
                 <form [formGroup]="loginForm" (ngSubmit)="onClickSubmit()">
                     <div class="w-25 form-floating mt-2 mb-3">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="user">
@@ -12,23 +12,22 @@
                     </div>
                     <div class=" w-25 form-floating mt-2 mb-2">
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
-                        <label for="floatingPassword" class="form-email-senha ">Senha</label>
+                        <label for="floatingPassword" class="form-email-senha ">Password</label>
                     </div>
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" style="color: #0049b6" checked>
-                        <label class="form-fonts form-check-label" for="flexSwitchCheckChecked">Permanecer
-                            logado</label>
+                        <label class="form-fonts form-check-label" for="flexSwitchCheckChecked">Keep 
+                            me logged in</label>
                     </div>
                     <button class="form-fonts w-25 btn btn-secondary mt-2 mb-2 py-2" type="submit">LOGIN</button>
                     
-                    <p class="form-fonts">Não tem conta ainda? <a routerLink="/register">Criar conta</a></p>
+                    <p class="form-fonts">Don't have an account yet? <a routerLink="/register">CREATE ACCOUNT</a></p>
                 </form>
             </div>
         </div>
         <div class="imagem-logo d-flex align-items-center">
             <div class="mx-auto">
-                <h2 id="text-goshop"><span><img src="../../../assets/vector-carrinho.svg" id="logo-goshop"
-                            alt="logo goshop"></span>GoShop</h2>
+                <h2 id="text-goshop"><span><i class="bi bi-chat-square-dots-fill"></i></span> ChatterFlow</h2>
             </div>
         </div>
     </body>
