--- a/src/app/components/navbar-d/navbar-d.component.html
+++ b/src/app/components/navbar-d/navbar-d.component.html
@@ -1,8 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand mx-2" id="t-logo" href="#"><span><img src="../../../assets/vector-carrinho.svg"
-                        id="logo-goshop" alt="logo goshop"></span>GoShop</a>
+            <a class="navbar-brand mx-2" id="t-logo" href="#"><span><i class="bi bi-chat-square-dots-fill"></i></span> ChatterFlow</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto gap-5 px-4">
                     <li class="nav-item"><i class="itens-font bi bi-arrow-left-square-fill text-leave" (click)="submit()"></i></li>
