--- a/src/app/components/navbar-t/navbar-t.component.html
+++ b/src/app/components/navbar-t/navbar-t.component.html
@@ -2,8 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-light mt-4 py-3 rounded-3">
         <div class="container-fluid">
             <div class="mx-auto">
-                <a class="navbar-brand mx-2" id="t-logo" href="#"><span><img src="../../../assets/vector-carrinho.svg"
-                            id="logo-goshop" alt="logo goshop"></span>GoShop</a>
+                <a class="navbar-brand mx-2" id="t-logo" href="#"><span><i class="bi bi-chat-square-dots-fill"></i></span> ChatterFlow</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -13,10 +12,10 @@
             <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link itens-font" aria-current="page" href="#"><i class="bi bi-person-fill"></i> MINHA CONTA</a>
+                        <a class="nav-link itens-font" aria-current="page" href="#"><i class="bi bi-person-fill"></i> MY ACCOUNT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link itens-font" routerLink="/register"><i class="bi bi-person-circle"></i> CRIAR CONTA</a>
+                        <a class="nav-link itens-font" routerLink="/register"><i class="bi bi-person-circle"></i> CREATE ACCOUNT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link itens-font" routerLink="/"><i class="bi bi-key-fill"></i> LOGIN</a>
