--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,10 +8,10 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 p-4 mb-1 text-black rounded-3 border border-dark bg-light" style="height: 600px;">
-      <p class="font-f">Mensagens</p>
+      <p class="font-f">Messages</p>
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-        <input type="text" class="form-control" placeholder="Pesquisar chat" aria-label="search"
+        <input type="text" class="form-control" placeholder="Search users" aria-label="search"
           aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
       </div>
       <div class="card mt-1 py-2" *ngFor="let inf of filteredInfo" (mouseover)="inf.isHovering = true"
@@ -60,7 +60,7 @@
       </div>
       <form [formGroup]="sendMsgForm" (ngSubmit)="onClickSubmit(threadId, sendMsgForm, Userid, receiverId)">
         <div class="input-group mt-auto">
-          <input type="text" class="form-control" placeholder="Digite a mensagem" aria-label="Digite a mensagem"
+          <input type="text" class="form-control" placeholder="Type your message" aria-label="Type your message"
             aria-describedby="button-addon2" formControlName="message">
           <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i class="bi bi-send-fill"></i></button>
         </div>
