--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,9 @@ $theme-colors: (
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 
+
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
