--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,34 +1,44 @@
 <div class="container">
     <app-navbar></app-navbar>
-    <body>
-        <div class="container-fluid">
-            <div class="main-content">
+    <div class="d-flex justify-content-center mt-5 ">
+        <div class="row py-5 border rounded-3 px-3 bg-light shadow box-area">
+            <div
+                class="col-lg-6 p-4 mb-1 rounded-3 bg-light d-flex flex-column justify-content-center">
                 <h2 id="v-compras">Let's chat !</h2>
                 <p id="v-email-senha">Enter your email and password to proceed</p>
                 <form [formGroup]="loginForm" (ngSubmit)="onClickSubmit()">
-                    <div class="w-25 form-floating mt-2 mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="user">
+                    <div class="form-floating mt-2 mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"
+                            formControlName="user">
                         <label for="floatingInput" class="form-email-senha ">Email</label>
                     </div>
-                    <div class=" w-25 form-floating mt-2 mb-2">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
-                        <label for="floatingPassword" class="form-email-senha ">Password</label>
+                    <div class="form-floating mt-2 mb-2">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+                            formControlName="password">
+                        <label for="floatingPassword" class="form-email-senha">Password</label>
                     </div>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" style="color: #0049b6" checked>
-                        <label class="form-fonts form-check-label" for="flexSwitchCheckChecked">Keep 
-                            me logged in</label>
+                    <div class="input-group mt-3 d-flex justify-content-between">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="form-check" value=""
+                                aria-label="Checkbox for following text input">
+                            <label for="form-check"><small class="checkbox-font">Remember me</small></label>
+                        </div>
+                        <div class="forgot">
+                            <small><a class="checkbox-font" routerLink="/register">Forgot password?</a></small>
+                        </div>
                     </div>
-                    <button class="form-fonts w-25 btn btn-secondary mt-2 mb-2 py-2" type="submit">LOGIN</button>
-                    
-                    <p class="form-fonts">Don't have an account yet? <a routerLink="/register">CREATE ACCOUNT</a></p>
+                    <button class="form-fonts w-100 btn btn-secondary mt-2 mb-2 py-2" type="submit">LOGIN</button>
+
+                    <p class="form-fonts">Don't have an account? <a routerLink="/register">Sign Up</a>
+                    </p>
                 </form>
             </div>
-        </div>
-        <div class="imagem-logo d-flex align-items-center">
-            <div class="mx-auto">
-                <h2 id="text-goshop"><span><i class="bi bi-chat-square-dots-fill"></i></span> ChatterFlow</h2>
+            <div
+                class="col-lg-6 p-4 mb-1 text-black rounded-3 bg-secondary d-flex flex-column justify-content-center imagem-teste">
+                <div class="mx-auto">
+                    <small id="text-goshop"><i class="bi bi-chat-square-dots-fill"></i> ChatterFlow</small>
+                </div>
             </div>
         </div>
-    </body>
+    </div>
 </div>
