--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -2,45 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
 
-// .main-content {
-//     // z-index: 1;
-// }
-
-.rectangle {
-    position: absolute;
-    width: 863px;
-    height: 713.5px;
-    left: 537px;
-    top: 210px;
-
-    /* Black&amp;White/White */
-    // background: #f8f9fa;
-    background: #FFFF;
-    box-shadow: 0px 7px 23px rgba(0, 0, 0, 0.05);
-    border-radius: 15px;
-}
-
-.teste {
-    background: #FFFFFF;
-    box-shadow: 0px 7px 23px rgba(0, 0, 0, 0.05);
-    border-radius: 15px;
-}
-
 .teste-img {
-    position: absolute;
-    width: 1870px;
-    height: 520px;
-    left: 25px;
-    top: 16px;
-    background: url(../../../assets/unsplash_nfoRa6NHTbU.png);
-    background-color: #0048b5;
+    background: url(../../../assets/dylan-gillis-KdeqA3aTnBY-unsplash-1.jpg);
     background-blend-mode: overlay;
-    border-radius: 30px;
-    // z-index: 0;
-}
-
-.switch {
-    color: #003ba8;
 }
 
 #v-compras {
@@ -48,7 +12,6 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    // line-height: 130%;
     color: #2D3748;
 }
 
@@ -73,13 +36,11 @@
 .itens-font {
     font-family: 'Abel';
     color: white;
-    z-index: 1;
 }
 
 .itens-font2 {
     font-family: 'Abel';
     color: white;
-    z-index: 1;
     font-size: 20px;
 }
 
