--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary mt-4 py-3 rounded-3">
         <div class="container-fluid">
-            <div class="mx-auto">
+            <div class="mx-auto position-absolute start-0">
                 <a class="navbar-brand mx-2" id="t-logo" href="#"><span><i class="bi bi-chat-square-dots-fill"></i></span> ChatterFlow</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -9,13 +9,13 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <ul class="navbar-nav d-flex flex-row gap-4">
                     <li class="nav-item">
                         <a class="nav-link itens-font" aria-current="page" href="#"><i class="bi bi-person-fill"></i> MY ACCOUNT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link itens-font" routerLink="/register"><i class="bi bi-person-circle"></i> CREATE ACCOUNT</a>
+                        <a class="nav-link itens-font" routerLink="/register"><i class="bi bi-person-circle"></i> SIGN UP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link itens-font" routerLink="/"><i class="bi bi-key-fill"></i> LOGIN</a>
